--- a/project/src/main/resources/templates/login.html
+++ b/project/src/main/resources/templates/login.html
@@ -35,24 +35,22 @@
                 <div class="form-group">
                     <div class="form-group-input">
                         <label class="input-text"><i class="fa fa-user"></i></label>
-                        <input type="text" id="username" name="username" placeholder="Tên đăng nhập"
-                               data-error="#error-username" required/>
+                        <input type="text" id="username" name="username" placeholder="Tên đăng nhập" required/>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="form-group-input">
                         <label class="input-text"><i class="fa fa-lock"></i></label>
-                        <input type="password" id="password" name="password" placeholder="Mật khẩu"
-                               data-error="#error-password" required/>
+                        <input type="password" id="password" name="password" placeholder="Mật khẩu" required/>
                     </div>
                 </div>
                 <div class="errorTxt"></div>
-                <div class="form-group text-center">
-                    <a th:href="@{forgotPassword}">Quên mật khẩu?</a>
-                </div>
                 <div class="form-group form-button">
                     <input type="button" name="signin" id="signin" class="form-submit" value="Đăng nhập"/>
+                </div>
+                <div class="form-group text-center">
+                    <a th:href="@{forgotPassword}">Quên mật khẩu?</a>
                 </div>
             </form>
         </div>
