--- a/project/src/main/resources/templates/changePassword.html
+++ b/project/src/main/resources/templates/changePassword.html
@@ -51,7 +51,7 @@
                                placeholder="Xác nhận mật khẩu mới"/>
                     </div>
                 </div>
-                <div class="errorTxt"></div>
+                <div class="text-red changePassword-err error"></div>
                 <div class="form-group form-button">
                     <input type="submit" name="confirm" id="confirm" class="form-submit" value="Xác nhận"/>
                 </div>
