Update createAccount page and add data API list account to manageAccount page

--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -521,6 +521,10 @@ div.searchable {
     font-size: 13px;
 }
 
+#msform input:disabled, #msform textarea:disabled {
+    background: rgb(235, 235, 228);
+}
+
 #msform input:focus, #msform textarea:focus {
     box-shadow: none !important;
     border: 1px solid #80bdff;
