--- a/project/src/main/resources/templates/createAccount.html
+++ b/project/src/main/resources/templates/createAccount.html
@@ -52,7 +52,7 @@
                             <option value="3">10V</option>
                         </select>
                     </div>
-                    <div class="errMsg text-left"></div>
+                    <div class="error createAccount-err text-left"></div>
                     <input type="button" id="next" class="next action-button" value="TIẾP"/>
                 </fieldset>
                 <fieldset>
@@ -82,7 +82,7 @@
                             <input type="email" class="form-control" id="email" placeholder="anv@gmail.com">
                         </div>
                     </div>
-                    <div class="errMsg text-left"></div>
+                    <div class="error createAccount-err text-left"></div>
                     <input type="button" id="previous" class="previous action-button-previous" value="Previous"/>
                     <input type="button" name="submit" id="submit" class="submit action-button" value="TẠO"/>
                 </fieldset>
