1. Check select all manageAccount page 2. Create function search in manageAccount page 3. Create resetPassword page 4. Create function delete account in manageAccount page

--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -373,6 +373,10 @@ tr.selected {
     background-color: #007bff40 !important;
 }
 
+.userlist-result {
+    text-align: center;
+    font-size: 25px;
+}
 
 /* Custom checkbox */
 .custom-checkbox {
