--- a/project/src/main/resources/templates/manageAccount.html
+++ b/project/src/main/resources/templates/manageAccount.html
@@ -195,6 +195,7 @@
         </div>
     </div>
 </div>
+<div class="modal-loading"></div>
 <div th:replace="fragments/footer :: footer"></div>
 <script type="text/javascript" th:src="@{/js/manageAccount.js}"></script>
 <script type="text/javascript" th:src="@{/js/manageTable.js}"></script>
