--- a/project/src/main/resources/templates/changePassword.html
+++ b/project/src/main/resources/templates/changePassword.html
@@ -74,9 +74,8 @@
         </div>
     </div>
 </main>
-<footer>
-    <div th:replace="fragments/footer :: footer"></div>
-    <script type="text/javascript" th:src="@{/js/changePassword.js}"></script>
-</footer>
+<div th:replace="fragments/footer :: footer"></div>
+<div class="modal-loading"></div>
 </body>
+<script type="text/javascript" th:src="@{/js/changePassword.js}"></script>
 </html>
