--- a/project/src/main/resources/templates/forgotPassword.html
+++ b/project/src/main/resources/templates/forgotPassword.html
@@ -36,8 +36,7 @@
         </div>
     </div>
 </main>
-<footer>
-    <div th:replace="fragments/footer :: footer"></div>
-</footer>
+<div th:replace="fragments/footer :: footer"></div>
+<div class="modal-loading"></div>
 </body>
 </html>
