--- a/project/src/main/resources/templates/login.html
+++ b/project/src/main/resources/templates/login.html
@@ -70,9 +70,8 @@
         </div>
     </div>
 </main>
-<footer>
-    <div th:replace="fragments/footer :: footer"></div>
-</footer>
+<div th:replace="fragments/footer :: footer"></div>
+<div class="modal-loading"></div>
 </body>
 <script type="text/javascript" th:src="@{/js/login.js}"></script>
 </html>
