--- a/project/src/main/resources/templates/userInformation.html
+++ b/project/src/main/resources/templates/userInformation.html
@@ -75,6 +75,7 @@
 </div>
 
 <div th:replace="fragments/footer :: footer"></div>
+<div class="modal-loading"></div>
 </body>
 
 <script type="text/javascript" th:src="@{/js/userInformation.js}"></script>
