--- a/project/src/main/resources/templates/createAccount.html
+++ b/project/src/main/resources/templates/createAccount.html
@@ -55,7 +55,7 @@
                 <fieldset>
                     <div class="form-group text-left username">
                         <label for="username">Tên đăng nhập <span class="text-red">*</span></label>
-                        <input type="text" class="form-control" id="username" placeholder="loptruong10H">
+                        <input type="text" class="form-control" id="username" placeholder="anv">
                     </div>
                     <div class="form-group text-left">
                         <label for="password">Mật khẩu <span class="text-red">*</span></label>
