--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -7,6 +7,25 @@ a:hover {
     text-decoration: none;
 }
 
+.btn {
+    min-width: 120px;
+}
+
+.btn-customer {
+    background: #4267b2;
+    font-weight: bold;
+    color: white;
+    border: none;
+    border-radius: .25rem;
+    cursor: pointer;
+    padding: 10px 15px;
+    margin: 10px 5px;
+}
+
+.btn-customer:hover {
+    color: white;
+    background: #35579c;
+}
 
 /*Header*/
 
@@ -168,21 +187,20 @@ a:hover {
 /*Loading*/
 
 .modal-loading {
-    display:    none;
-    position:   fixed;
-    z-index:    1000;
-    top:        0;
-    left:       0;
-    height:     100%;
-    width:      100%;
-    background: rgba( 255, 255, 255, .8 )
-    url('http://i.stack.imgur.com/FhHRx.gif')
-    50% 50%
-    no-repeat;
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(255, 255, 255, .8) url('http://i.stack.imgur.com/FhHRx.gif') 50% 50% no-repeat;
 }
+
 body.loading .modal-loading {
     overflow: hidden;
 }
+
 body.loading .modal-loading {
     display: block;
 }
@@ -349,7 +367,6 @@ body.loading .modal-loading {
 
 .search {
     margin: 10px 0;
-    display: flex;
     align-items: center;
 }
 
@@ -360,9 +377,9 @@ body.loading .modal-loading {
     align-items: center;
 }
 
-.search-line input {
+.search-line input, .search-line select {
     padding: 5px;
-    padding-right: 25px;
+    width: 220px;
     color: #495057;
     border: 1px solid #ced4da;
     border-radius: .25rem;
@@ -399,6 +416,42 @@ tr.selected {
     font-size: 25px;
 }
 
+.table-paging {
+    padding: 15px 5px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.table-paging button {
+    box-sizing: border-box;
+    display: inline-block;
+    min-width: 1.5em;
+    padding: 0.5em 1em;
+    margin-left: -1px;
+    text-align: center;
+    text-decoration: none !important;
+    cursor: pointer;
+    color: #0070d2 !important;
+    border: 1px solid #dddbda;
+    border-radius: 2px;
+    background: transparent;
+}
+
+.table-paging button.table-paging__page_cur {
+    color: white !important;
+    background-color: #0070d2;
+    border: 1px solid #0070d2;
+}
+
+.table-paging button:hover {
+    text-decoration: underline;
+}
+
+.table-paging button.table-paging__page_cur:hover {
+    cursor: default;
+    text-decoration: none;
+}
+
 /* Custom checkbox */
 .custom-checkbox {
     position: relative;
@@ -410,6 +463,10 @@ tr.selected {
     position: absolute;
     margin: 5px 0 0 3px;
     z-index: 9;
+}
+
+.custom-checkbox label {
+    position: relative;
 }
 
 .custom-checkbox label:before {
@@ -547,7 +604,7 @@ div.searchable {
 }
 
 #msform input:disabled, #msform textarea:disabled {
-    background: rgb(235, 235, 228);
+    background: #ced4da;
 }
 
 #msform input:focus, #msform textarea:focus {
@@ -696,6 +753,11 @@ div.searchable {
     padding: 10px 0 10px 15px;
     font-weight: 400;
     border: 1px solid #4267b2;
+    width: 250px;
+}
+
+.basic-slide:disabled {
+    background: #ced4da;
 }
 
 .input-info {
@@ -718,8 +780,7 @@ div.searchable {
 }
 
 .info-des .btn {
-    margin-top: 20px;
-    margin-left: 20px;
+    margin: 20px auto;
 }
 
 /*END User Information*/
