--- a/project/src/main/resources/templates/login.html
+++ b/project/src/main/resources/templates/login.html
@@ -45,7 +45,7 @@
                         <input type="password" id="password" name="password" placeholder="Mật khẩu" required/>
                     </div>
                 </div>
-                <div class="errorTxt"></div>
+                <div class="error login-err"></div>
                 <div class="form-group form-button">
                     <input type="button" name="signin" id="signin" class="form-submit" value="Đăng nhập"/>
                 </div>
@@ -60,7 +60,8 @@
     <div class="modal" tabindex="-1" role="dialog" id="loginSuccess">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <div class="modal-body">
+                <div class="modal-body text-center">
+                    <img class="mb-3 mt-3" src="https://img.icons8.com/material/100/1ABC9C/ok--v1.png"/>
                     <h5>Đăng nhập thành công!</h5>
                 </div>
                 <div class="modal-footer">
