--- a/project/src/main/resources/templates/userInformation.html
+++ b/project/src/main/resources/templates/userInformation.html
@@ -27,7 +27,7 @@
     <div class="col-xl-6 col-md-auto mx-auto veen">
         <h1>Thông tin cá nhân</h1>
         <hr>
-        <div class="info-des col-xl-9 mx-auto">
+        <div class="info-des col-xl-10 mx-auto">
             <div class="input-info">
                 <label for="fullName">Họ và tên</label>
                 <input class="basic-slide" id="fullName" type="text" value="" disabled/>
@@ -52,9 +52,11 @@
                 <label for="className">Lớp</label>
                 <input class="basic-slide" id="className" type="text" value="" disabled/>
             </div>
-            <div class="text-red userInfo-err"></div>
-            <button type="button" class="btn btn-success" id="editInfo">CHỈNH SỬA</button>
-            <button type="button" class="btn btn-success hide" id="confirmEdit">XONG</button>
+            <div class="error userInfo-err"></div>
+            <div class="text-center">
+                <button type="button" class="btn btn-customer" id="editInfo">CHỈNH SỬA</button>
+                <button type="button" class="btn btn-customer hide" id="confirmEdit">XONG</button>
+            </div>
         </div>
     </div>
 </div>
