--- a/project/src/main/resources/templates/createAccount.html
+++ b/project/src/main/resources/templates/createAccount.html
@@ -66,7 +66,7 @@
                         <input type="password" class="form-control" id="confirm-password">
                     </div>
                     <div class="form-group fullName text-left">
-                        <label for="fullName">Họ và tên <span class="text-red">*</span></label>
+                        <label for="fullName">Họ và tên</label>
                         <input type="text" class="form-control" id="fullName" placeholder="Nguyễn văn A">
                     </div>
                     <div class="full-info">
