create template module 2 + 3

--- a/project/src/main/resources/templates/fragments/header.html
+++ b/project/src/main/resources/templates/fragments/header.html
@@ -76,8 +76,8 @@
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">QUẢN LÝ</a>
                         <div class="dropdown-menu">
                             <a href="#" class="dropdown-item" th:href="@{manageAccount}">Quản lý tài khoản</a>
-                            <a href="#" class="dropdown-item">Quản lý giáo viên</a>
-                            <a href="#" class="dropdown-item">Quản lý lớp</a>
+                            <a href="#" class="dropdown-item" th:href="@{manageTeacher}">Quản lý giáo viên</a>
+                            <a href="#" class="dropdown-item" th:href="@{manageClass}">Quản lý lớp</a>
                         </div>
                     </li>
                     <li class="nav-item">
