--- a/project/src/main/resources/templates/manageAccount.html
+++ b/project/src/main/resources/templates/manageAccount.html
@@ -85,12 +85,12 @@
                         <label for="selectAll"></label>
                     </span>
                 </th>
-                <th class="text-center">Tên đăng nhập</th>
-                <th class="text-center">Họ và tên</th>
-                <th class="text-center">Chức vụ</th>
-                <th class="text-center">Lớp</th>
-                <th class="text-center">SĐT</th>
-                <th class="text-center">Email</th>
+                <th>Tên đăng nhập</th>
+                <th>Họ và tên</th>
+                <th>Chức vụ</th>
+                <th>Lớp</th>
+                <th>SĐT</th>
+                <th>Email</th>
             </tr>
             </thead>
             <tbody>
