--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -592,7 +592,7 @@ div.searchable {
 }
 
 /*inputs*/
-#msform input, #msform textarea {
+#msform input[type="text"], #msform input[type="password"], #msform textarea {
     padding: 15px;
     border: 1px solid #ced4da;
     border-radius: .25rem;
@@ -781,6 +781,69 @@ div.searchable {
 
 .info-des .btn {
     margin: 20px auto;
+}
+
+.checkbox-toggle {
+    display: inline-block;
+    margin: auto 85px;
+    width: 80px;
+    height: 26px;
+    background: #27ae606b;
+    transition: 0.3s ease all;
+    position: relative;
+    border-radius: 50px;
+    border: 1px solid #27ae60;
+}
+
+.checkbox-toggle:after {
+    content: 'OFF';
+    color: #000;
+    position: absolute;
+    right: 10px;
+    z-index: 0;
+    font: 12px/26px Arial, sans-serif;
+    font-weight: bold;
+    text-shadow: 1px 1px 0px rgba(255, 255, 255, .15);
+}
+
+.checkbox-toggle:before {
+    content: 'ON';
+    color: #27ae60;
+    position: absolute;
+    left: 10px;
+    z-index: 0;
+    font: 12px/26px Arial, sans-serif;
+    font-weight: bold;
+}
+
+.checkbox-toggle label {
+    display: block;
+    min-width: 34px;
+    height: 20px;
+    cursor: pointer;
+    position: absolute;
+    top: 2px;
+    left: 3px;
+    z-index: 1;
+    background: #fcfff4;
+    border-radius: 50px;
+    transition: all 0.4s ease;
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.3);
+    padding: 1px;
+    margin: 0;
+}
+
+.checkbox-toggle input[type=checkbox] {
+    visibility: hidden;
+}
+
+.checkbox-toggle > .checkbox-toggle input[type=checkbox]:checked{
+    background: #ced4da;
+    border: 1px solid #adb5bd;
+}
+
+.checkbox-toggle input[type=checkbox]:checked + label {
+    left: 43px;
 }
 
 /*END User Information*/
