--- a/project/src/main/resources/templates/manageTeacher.html
+++ b/project/src/main/resources/templates/manageTeacher.html
@@ -68,6 +68,7 @@
                 <th>Tên định danh</th>
                 <th>SĐT</th>
                 <th>Email</th>
+                <th>Trạng thái</th>
                 <th></th>
             </tr>
             </thead>
