--- a/project/src/main/resources/templates/import.html
+++ b/project/src/main/resources/templates/import.html
@@ -1,3 +1,25 @@
+<!--<!DOCTYPE html>-->
+<!--<html xmlns:th="http://www.thymeleaf.org">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    &lt;!&ndash; jQuery library &ndash;&gt;-->
+<!--    <script th:src="@{/js/jquery-3.5.1.min.js}"></script>-->
+<!--    <title>Title</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<form id="formimport" action="" method="post" enctype="multipart/form-data">-->
+
+<!--    <input type="file" th:name="file">-->
+
+<!--    <input th:type="submit" value="Import"/>-->
+<!--</form>-->
+<!--aa-->
+<!--&lt;!&ndash;<tbody th:each="s : ${test}">&ndash;&gt;-->
+<!--&lt;!&ndash;    <p th:text="${s}"></p>&ndash;&gt;-->
+<!--&lt;!&ndash;</tbody>&ndash;&gt;-->
+<!--</body>-->
+<!--</html>-->
+
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
@@ -13,8 +35,8 @@
     <input th:type="submit" value="Import"/>
 </form>
 aa
-<!--<tbody th:each="s : ${test}">-->
-<!--    <p th:text="${s}"></p>-->
-<!--</tbody>-->
+<tbody>
+<!--<p th:text = "${message.message}"></p>-->
+</tbody>
 </body>
 </html>
