--- a/project/src/main/resources/templates/import.html
+++ b/project/src/main/resources/templates/import.html
@@ -34,9 +34,7 @@
 
     <input th:type="submit" value="Import"/>
 </form>
-aa
-<tbody>
-<!--<p th:text = "${message.message}"></p>-->
-</tbody>
+message :
+<h1 th:text="${message}"></h1>
 </body>
 </html>
