kimpt142 commit front-end manage class

--- a/project/src/main/resources/templates/manageClass.html
+++ b/project/src/main/resources/templates/manageClass.html
@@ -38,12 +38,7 @@
         <table class="table table-hover">
             <thead>
             <tr class="align-items-center">
-                <th>
-                    <span class="custom-checkbox">
-                        <input type="checkbox" id="selectAll">
-                        <label for="selectAll"></label>
-                    </span>
-                </th>
+                <th>STT</th>
                 <th>Khối</th>
                 <th>Hệ chuyên</th>
                 <th>Tên định danh</th>
