--- a/project/src/main/resources/templates/createClass.html
+++ b/project/src/main/resources/templates/createClass.html
@@ -43,6 +43,10 @@
                         </select>
                     </div>
                     <div class="form-group text-left">
+                        <label for="identifier">Tên định danh <span class="text-red">*</span></label>
+                        <input type="text" class="form-control" id="identifier" placeholder="10T">
+                    </div>
+                    <div class="form-group text-left">
                         <h6>Tạo thêm hệ chuyên ở <a th:href="@{createGifftedClass}">ĐÂY</a></h6>
                     </div>
                     <div class="form-group text-left">
