--- a/project/src/main/resources/templates/editClass.html
+++ b/project/src/main/resources/templates/editClass.html
@@ -30,7 +30,7 @@
         <div class="info-des col-xl-10 mx-auto">
             <div class="input-info">
                 <label for="identifier">Tên định danh</label>
-                <input class="basic-slide" id="identifier" type="text" value="" disabled/>
+                <input class="basic-slide" id="identifier" type="text" value=""/>
             </div>
             <div class="input-info">
                 <label for="status">Trạng thái</label>
@@ -40,7 +40,7 @@
                 </div>
 
             </div>
-            <div class="error teacherInfo-err"></div>
+            <div class="error classInfo-err"></div>
             <div class="text-center">
                 <button type="button" class="btn btn-customer" id="editInfo">CHỈNH SỬA</button>
                 <button type="button" class="btn btn-customer hide" id="confirmEdit">XONG</button>
