--- a/project/src/main/resources/templates/manageTeacher.html
+++ b/project/src/main/resources/templates/manageTeacher.html
@@ -36,8 +36,8 @@
                 <div class="col-xl-4 d-inline-block search-line">
                     <span>Thứ tự</span>
                     <select class="combobox searchable" id="orderBy">
-                        <option value="0" selected="selected">Giảm dần</option>
-                        <option value="1">Tăng dần</option>
+                        <option value="0" >Giảm dần</option>
+                        <option value="1" selected="selected">Tăng dần</option>
                     </select>
                 </div>
                 <div class="d-inline-block ml-2">
@@ -68,7 +68,6 @@
                 <th>Tên định danh</th>
                 <th>SĐT</th>
                 <th>Email</th>
-                <th>Trạng thái</th>
                 <th></th>
             </tr>
             </thead>
