--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -420,6 +420,7 @@ tr.selected {
     padding: 15px 5px;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
 }
 
 .table-paging input {
@@ -452,6 +453,19 @@ tr.selected {
     text-decoration: none;
 }
 
+.btn-page {
+    border-radius: 3px 0 0 3px;
+    border: 1px solid #aaa;
+    min-width: 36px;
+    height: 34px;
+    line-height: 34px;
+    font-size: 13px;
+    background: #fff;
+    padding: 0;
+}
+.pageNumber{
+    margin-left: 20px;
+}
 /* Custom checkbox */
 .custom-checkbox {
     position: relative;
