--- a/project/src/main/resources/templates/manageAccount.html
+++ b/project/src/main/resources/templates/manageAccount.html
@@ -52,8 +52,8 @@
                     <div class="search-line">
                         <span>Thứ tự</span>
                         <select class="combobox searchable" id="orderBy">
-                            <option value="0" selected="selected">Giảm dần</option>
-                            <option value="1">Tăng dần</option>
+                            <option value="0">Giảm dần</option>
+                            <option value="1" selected="selected">Tăng dần</option>
                         </select>
                     </div>
                 </div>
