--- a/project/src/main/resources/templates/manageClass.html
+++ b/project/src/main/resources/templates/manageClass.html
@@ -27,6 +27,38 @@
     <div class="table-wrapper">
         <div class="table-title">
             <h2>Danh sách lớp</h2>
+            <div class="search">
+                <div class="col-xl-4 d-inline-block">
+                    <div class="search-line" id="searchByIdentifier">
+                        <span>Tên định danh</span>
+                        <input type="text" placeholder="Tên định danh">
+                    </div>
+                    <div class="search-line">
+                        <span>Sắp xếp theo</span>
+                        <select class="combobox searchable" id="orderBy">
+                            <option value="0" selected="selected">Tên định danh</option>
+                            <option value="1">Khối</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-xl-2 d-inline-block"></div>
+                <div class="col-xl-4 d-inline-block">
+                    <div class="search-line" id="searchByGrade">
+                        <span>Khối</span>
+                        <input type="text" placeholder="Khối">
+                    </div>
+                    <div class="search-line">
+                        <span>Thứ tự</span>
+                        <select class="combobox searchable" id="sortBy">
+                            <option value="0">Giảm dần</option>
+                            <option value="1" selected="selected">Tăng dần</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="d-inline-block ml-2">
+                    <button class="btn btn-search" id="search">Tìm kiếm</button>
+                </div>
+            </div>
         </div>
         <div class="table-title-2">
             <div class="col-sm-6 d-flex justify-content-end align-items-center">
