--- a/project/src/main/resources/templates/index.html
+++ b/project/src/main/resources/templates/index.html
@@ -42,6 +42,7 @@
     <div><a th:href="@{createGifftedClass}">Thêm hệ chuyên</a></div>
     <br>
     <h2>Module 4: Thời khóa biểu</h2>
+    <div><a th:href="@{timetableClass}">Thời khóa biểu của lớp</a></div>
     <br>
 </div>
 <div th:replace="fragments/footer :: footer"></div>
