kimpt142 commit fix js 2/7

--- a/project/src/main/resources/templates/editClass.html
+++ b/project/src/main/resources/templates/editClass.html
@@ -45,12 +45,12 @@
                 <div class="basic-slide text-left" id="status">
                     <div class="form-check">
                         <div class="form-check-label">
-                            <input type="radio" class="form-check-input" name="optradio">Hoạt động
+                            <input type="radio" class="form-check-input" value="0" name="optradio">Hoạt động
                         </div>
                     </div>
                     <div class="form-check">
                         <div class="form-check-label">
-                            <input type="radio" class="form-check-input" name="optradio">Không hoạt động
+                            <input type="radio" class="form-check-input" value="1" name="optradio">Không hoạt động
                         </div>
                     </div>
                 </div>
