1. manage account: sửa vị trí sort vs order 2. manageclass, khối search combobox

--- a/project/src/main/resources/templates/manageAccount.html
+++ b/project/src/main/resources/templates/manageAccount.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="search-line">
                         <span>Sắp xếp theo</span>
-                        <select class="combobox searchable" id="sortBy">
+                        <select class="combobox searchable" id="orderBY">
                             <option value="0" selected="selected">Tên đăng nhập</option>
                             <option value="1">Họ và tên</option>
                         </select>
@@ -51,7 +51,7 @@
                     </div>
                     <div class="search-line">
                         <span>Thứ tự</span>
-                        <select class="combobox searchable" id="orderBy">
+                        <select class="combobox searchable" id="sortBy">
                             <option value="0">Giảm dần</option>
                             <option value="1" selected="selected">Tăng dần</option>
                         </select>
