--- a/project/src/main/resources/templates/manageClass.html
+++ b/project/src/main/resources/templates/manageClass.html
@@ -43,9 +43,14 @@
                 </div>
                 <div class="col-xl-2 d-inline-block"></div>
                 <div class="col-xl-4 d-inline-block">
-                    <div class="search-line" id="searchByGrade">
+                    <div class="search-line">
                         <span>Khối</span>
-                        <input type="text" placeholder="Khối">
+                        <select class="combobox searchable" id="searchByGrade">
+                            <option value="0" selected="selected">Tất cả</option>
+                            <option value="10">10</option>
+                            <option value="11">11</option>
+                            <option value="12">12</option>
+                        </select>
                     </div>
                     <div class="search-line">
                         <span>Thứ tự</span>
